--- a/templates/index.html
+++ b/templates/index.html
@@ -1,12 +1,17 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-<head>
-    <meta charset="UTF-8">
-    <title>Respira Aí - Início</title>
-</head>
-<body>
-    <h1>Bem-vindo ao Respira Aí</h1>
-    <p>Este é o início do seu projeto.</p>
-    <a href="/login">Entrar</a>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <title>Respira Aí</title>
+  </head>
+  <header>
+    <nav class="nav-bar">
+        <h1>RESPIRA AÍ</h1>
+    </nav>
+  </header>
+  <body>
+    <div>
+
+    </div>
+  </body>
 </html>
