--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -12,6 +12,53 @@ header h1 {
   font-size: 5vw;
 }
 header nav {
-    
+
     padding-bottom: 2px;
+}
+
+.portfolio {
+  background-color: #f0db1f;
+  margin-top: 10vh;
+  flex-wrap: wrap;
+  text-align: center;
+  justify-content: center;
+}
+.cards {
+  display: inline-block;
+  vertical-align: top;
+  width: 220px;
+  height: 300px;
+  margin: 10px;
+  background-color: #f0f0f0;
+  border-radius: 15px;
+  box-shadow: 0px 4px 10px rgba(0,0,0,0.2);
+  overflow: hidden;
+}
+.cards img {
+  width: 100%;
+  height: 150px;
+  object-fit: cover;
+}
+.cards h4{
+  margin: 12px 0 8px 0;
+  font-size: 1.2em;
+  color: #333;
+}
+.cards p {
+  margin: 0 12px 12px 12px;
+  font-size: 0.9em;
+  color: #000000;
+}
+.cards:hover {
+  transform: scale(1.05);
+  transition: transform 0.3s ease;
+}
+.act {
+  background-color: #f0dcd2;
+  padding: 10px 20px;
+  border-radius: 8px;
+}
+.act:hover {
+  background-color: #e4b827;
+  cursor: pointer;
 }
