--- a/templates/login.html
+++ b/templates/login.html
@@ -6,7 +6,7 @@
   <title>Login - RespiraAi</title>
   <link rel="stylesheet" href="../static/css/style.css" />
 </head>
-<body>
+<body class="login-page">
   <div class="login-container">
     <h1>RespiraAi</h1>
     <form class="login-form" onsubmit="return login(event)">
