Ajustes no redirecionamento após login e melhorias  na validação de cadastro.

--- a/templates/login.html
+++ b/templates/login.html
@@ -25,7 +25,7 @@
       const pass = document.getElementById("pass").value;
 
       if (user === "admin" && pass === "1234") {
-        window.location.href = "home.html"; // redireciona
+        window.location.href = "index.html"; 
       } else {
         document.getElementById("erro").innerText = "Usuário ou senha incorretos!";
       }
