--- a/templates/login.html
+++ b/templates/login.html
@@ -9,6 +9,7 @@
 <body class="login-page">
   <div class="login-container">
     <h1>RespiraAi</h1>
+    <h2>Faça login para continuar</h2>
     <form class="login-form" onsubmit="return login(event)">
       <input type="text" id="user" placeholder="Usuário" required />
       <input type="password" id="pass" placeholder="Senha" required />
@@ -18,17 +19,5 @@
     <p class="cadastro">Não tem conta? <a href="cadastro.html">Cadastre-se</a></p>
   </div>
 
-  <script>
-    function login(event) {
-      event.preventDefault();
-      const user = document.getElementById("user").value;
-      const pass = document.getElementById("pass").value;
-
-      if (user === "admin" && pass === "1234") {
-        window.location.href = "index.html"; 
-      } else {
-        document.getElementById("erro").innerText = "Usuário ou senha incorretos!";
-      }
-    }
-  </script>
+  <script src="../static/js/login.js"></script>
 </body>
