--- a/templates/ex.html
+++ b/templates/ex.html
@@ -45,12 +45,34 @@
       flex-direction: column;
       align-items: center;
     }
-    .ex-area {
-      width: 420px;
-      height: 240px;
-      background: #ffcb5b;
-      border-radius: 40px;
+    .circle {
+      width: 180px;
+      height: 180px;
+      background: radial-gradient(circle, #ffeb3b 60%, #ffcb5b 100%);
+      border-radius: 50%;
       margin-bottom: 32px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      animation: breathing 8s infinite;
+      transition: animation-duration 0.3s;
+    }
+    @keyframes breathing {
+      0%   { transform: scale(1); }
+      25%  { transform: scale(1.3); }
+      50%  { transform: scale(1); }
+      75%  { transform: scale(0.8); }
+      100% { transform: scale(1); }
+    }
+    .instruction {
+      position: absolute;
+      width: 100%;
+      text-align: center;
+      font-size: 1.5rem;
+      margin-top: 200px;
+      color: #222;
+      font-weight: bold;
+      letter-spacing: 1px;
     }
     .btn-row {
       display: flex;
@@ -107,10 +129,9 @@
       .ex-box {
         max-width: 98vw;
       }
-      .ex-area {
-        width: 95vw;
-        min-width: 180px;
-        height: 140px;
+      .circle {
+        width: 120px;
+        height: 120px;
       }
       .btn-row {
         flex-direction: column;
@@ -120,6 +141,10 @@
         width: 100%;
         padding: 14px 0;
         font-size: 1em;
+      }
+      .instruction {
+        margin-top: 140px;
+        font-size: 1.1rem;
       }
     }
   </style>
@@ -137,18 +162,24 @@
   </header>
   <main>
     <div class="ex-box">
-      <div class="ex-area"></div>
-      <div class="btn-row">
-        <button class="btn-circular">INICIAR</button>
-        <button class="btn-circular">PAUSAR</button>
+      <div style="position:relative;">
+        <div class="circle" id="breathCircle"></div>
       </div>
-      <button class="btn-retangular">TERMINAR</button>
-      <div class="tempo-total">
+      <div class="btn-row">
+        <button class="btn-circular" id="btnIniciar">INICIAR</button>
+        <button class="btn-circular" id="btnPausar">PAUSAR</button>
+      </div>
+      <button class="btn-retangular" id="btnTerminar">TERMINAR</button>
+      <div class="tempo-total" id="tempoTotal">
         TEMPO TOTAL:&nbsp;&nbsp;00:00
       </div>
     </div>
   </main>
+  <script>
+    function setBreathDuration(segundos) {
+      document.getElementById('breathCircle').style.animationDuration = segundos + 's';
+    }
+  </script>
   <script src="../static/js/ex1.js"></script>
- 
 </body>
 </html>
