--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -55,17 +55,19 @@ body {
   color: #222;
 }
 .cards {
-  margin-top: 36px;
-  background: transparent;
+  height: 20vh;
+  width: 90%;
+  margin: 35px;
+  background-color: #ffeb3b;
   box-shadow: none;
-  border-radius: 0;
+  border-radius: 10px;
   padding: 0;
   display: flex;
   flex-direction: column;
   align-items: center;
 }
 .cards h4 {
-  font-size: 1.3em;
+  font-size: 2.3em;
   margin-bottom: 8px;
   color: #222;
   font-weight: bold;
