--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -93,7 +93,7 @@ body {
   background: #e4b827;
   color: #fff;
 }
-@media (max-width: 700px) {
+@media (max-width: 785px) {
   .nav-bar {
     flex-direction: column;
     height: auto;
@@ -103,6 +103,10 @@ body {
     max-width: 95vw;
     padding: 24px 8vw;
   }
+  .nav-bar .menu-links a {
+    font-size: 4vw;
+  }
+
 }
 .historico-main-content {
   max-width: 900px;
