Ajuste no caminho de links.

--- a/templates/index.html
+++ b/templates/index.html
@@ -13,7 +13,7 @@
         <div class="menu-links">
           <a href="#card">Exercícios</a>
           <a href="h.html">Histórico</a>
-          <a href="estatisticas.html">Estatísticas</a>
+          <a href="#estatisticas">Estatísticas</a>
         </div>
       </nav>
     </header>
