Ultimas atualizações feitas pra melhorar o site

--- a/templates/ex.html
+++ b/templates/ex.html
@@ -159,7 +159,7 @@
       </nav>
     </header>
     <main>
-      <div class="ex-box">
+      <div class="ex-box" data-duracao="{{ exercicio.duraçao }}">
         <div class="descricao-ex">
           <strong>{{ exercicio.nome }}</strong><br /><br />
           {{ exercicio.descriçao|safe }}
