--- a/templates/h.html
+++ b/templates/h.html
@@ -36,7 +36,7 @@
             <tr>
               <td>{{ pratica.data }}</td>
               <td>{{ pratica.exercicio }}</td>
-              <td>{{ pratica.tempo }}</td>
+              <td>{{ pratica.tempo_dedicado }} min</td>
             </tr>
             {% endfor %}
           </tbody>
