--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -39,6 +39,7 @@ body {
   position: relative;
   width: 100%;
   height: 60vh;
+  padding: 30px 12vw;
   min-height: 250px;
   max-height: 200vh;
 }
@@ -199,4 +200,13 @@ span {
 .ex-card .btn-escolha {
   margin-top: 8px;
   align-self: flex-end;
+}
+footer {
+  background: #ffeb3b;
+  color: #222;
+  text-align: center;
+  padding: 22px 0;
+  margin-top: 40px;
+  font-size: 1.1em;
+  border-top: 2px solid #e4b827;
 }
